compiling_error.txt
/home/cgcv/Documents/ProgramasC++/Proyecto_P3/Person.cpp: In function ‘double get_spAttack()’:
/home/cgcv/Documents/ProgramasC++/Proyecto_P3/Person.cpp:69:10: error: ‘spAttack’ was not declared in this scope
   return spAttack;
          ^
/home/cgcv/Documents/ProgramasC++/Proyecto_P3/Person.cpp: In function ‘void set_spDefense(double)’:
/home/cgcv/Documents/ProgramasC++/Proyecto_P3/Person.cpp:73:3: error: ‘spDefense’ was not declared in this scope
   spDefense = spd;
   ^
/home/cgcv/Documents/ProgramasC++/Proyecto_P3/Person.cpp: In function ‘double get_spDefense()’:
/home/cgcv/Documents/ProgramasC++/Proyecto_P3/Person.cpp:77:10: error: ‘spDefense’ was not declared in this scope
   return spDefense;
          ^
